@@ -12,7 +12,6 @@
 #include <tchar.h>
 #include <sect_attribs.h>
 #include <locale.h>
-#include "../revstamp.h"
 
 const PIMAGE_TLS_CALLBACK __dyn_tls_init_callback;
 
@@ -30,11 +29,3 @@ _encode_pointer (void *ptr)
 
 /* 0:console, 1:windows.  */
 int mingw_app_type = 0;
-
-const char *__mingw_get_crt_info (void)
-{
-  return "MinGW-W64 Runtime " __MINGW64_VERSION " ("
-         __MINGW64_VERSION_STATE " - "
-	 "rev. " __MINGW_W64_REV ") " __MINGW_W64_REV_STAMP;
-}
-
